...
    <string name="tnc_driver_card_text">TNC Driver Card</string>
    <string name="you_will_need_a_tnc_card_text">You will need a TNC Card from the City Transportation Office</string>
    <string name="dont_have_one_tnc_text">Don\'t have one?</string>
    <string name="mock_tnc_instructions_text"><![CDATA[View instructions <a href=\"https://media.rideaustin.com/download/Houston_TNC_Application_Form_2016.pdf\">here</a> on how to obtain one. Download TNC Driver Registration forms <a href=\"https://media.rideaustin.com/download/Houston_TNC_Application_Form_2016.pdf\">here</a>.]]></string>
    <string name="general_server_comunication_error">We experienced error during server communication, do you want to retry?</string>

    <string name="missing_tnc_card_photo_warning">Please upload %s photo to continue</string>
    <string name="missing_tnc_card_expiration_date_warning">Please choose valid expiration date to continue</string>

    <string name="loading">Loading…</string>
    <string name="you_have_arrived_to_pickup_location">You have arrived to pickup location</string>

    <string name="fb_email_error">Please allow to use your email in order to complete registration</string>
    <string name="fb_login_error">We are unable to access your email associated with Facebook.\nPlease check your permissions for %1$s and/or create a %1$s account using your email</string>
...
    <!-- driver sign up -->
    <string name="driver_photo_description">Take Driver User Photo</string>
    <string name="driver_photo_detail">Shows your face clearly (no dark shadows, not blurry)\nNo sunglasses (but regular glasses are fine)\nOnly has yourself (no group photos)</string>
    <string name="driver_license_take_photo_description">Take a photo of your Driver\'s License</string>
    <string name="driver_can_easy_read">Please make sure we can easily read all the details.</string>
    <string name="driver_insurance_take_photo_description">Take a photo of your Insurance</string>
    <string name="driver_continue">Continue</string>
    <string name="driver_vehicle_tell_us">Tell us about your vehicle</string>
    <string name="driver_vehicle_information_description">To qualify you must be 21 years of age and have a vehicle that meets the following requirements:</string>
    <string name="driver_vehicle_information_required_year">2001 or newer</string>
    <string name="driver_vehicle_information_required_doors">4 doors</string>
    <string name="driver_vehicle_information_required_not_salvage">Not salvaged</string>
    <string name="driver_clear_photo">Are you sure your Driver Profile Photo clearly shows your face and eyes without sunglasses?</string>

    <string name="title_driver_photo">Your Driver Photo</string>
    <string name="title_driver_license">Driver License</string>
    <string name="title_driver_tnc_sticker">Auto Inspection Sticker</string>
    <string name="title_driver_insurance">Insurance</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_driver_vehicle_information">Vehicle Information</string>
    <string name="title_driver_year">Year</string>
    <string name="title_driver_make">Make</string>
    <string name="title_driver_model">Model</string>
    <string name="title_driver_color">Color</string>
    <string name="title_license_plate">License plate</string>
    <string name="licence_place">Licence place</string>
    <string name="driver_licence_expiration_date">Expiration Date:</string>
    <!-- driver -->
    <string name="register_driver">Register as a driver</string>
    <string name="register_driver_sucess">Thank you for your application! We will reach out to you soon regarding next steps.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="rating_feedback_message_text">What feedback would you give %s</string>

    <string name="driver_info">Interested in\nbecoming a driver?</string>
    <string name="coming_soon">Coming soon, please be patient</string>
    <string name="license_confirm">Have you had your license for at least ONE year?</string>
    <string name="car_photo_confirm">Please take clear photo %1$s?</string>
    <string name="car_photo_front">Front right angle, showing the licence plate</string>
    <string name="car_photo_back">Back left angle showing plate</string>
    <string name="car_photo_inside">Inside photo showing the entire back seat</string>
    <string name="car_photo_trunk">Open trunk, full view</string>
    <string name="car_photo_dialog_required">Please upload car photo to continue.</string>
    <string name="car_photo_dialog_front">Are you sure the Photo is clearly taken from the Front right angle side and shows your license plate?</string>
    <string name="car_photo_dialog_back">Are you sure the Photo is clearly taken from the Back left angle side and shows your license plate?</string>
    <string name="car_photo_dialog_inside">Are you sure the Photo is clearly taken from Inside the car showing the entire back seat?</string>
    <string name="car_photo_dialog_trunk">Are your sure the Photo is showing the Trunk open in full view?</string>
    <string name="missing_addresses_fare_estimate_msg">Please enter PICKUP and DESTINATION locations</string>
...
