...
        <variable name="terms" type="String"/>
    </data>

    <LinearLayout style="@style/LinearLayout.Base">

        <ImageView
            android:id="@+id/license"
            style="@style/ImageView.DriverSignUp.Top"
            android:src="@drawable/icn_insurance" />

        <TextView
            style="@style/RATextView.Driver.Header"
            android:layout_width="match_parent"
...
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_elevation"
                android:text="@string/i_agree_and_acknowledge"
                android:enabled="@{!TextUtils.isEmpty(terms)}"/>

            <Button
                android:id="@+id/continue_button"
                style="@style/Button.RoundedBlueButton"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_elevation"
                android:text="@string/driver_continue"
                android:enabled="@{!TextUtils.isEmpty(terms)}"/>

...
